add solution to ransom not problem

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - HashTableRansomNote",
+            "request": "launch",
+            "mainClass": "DataStructures.HashTableRansomNote"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - JumpingOnCloudsSolution",
             "request": "launch",
             "mainClass": "HackerRank.Easy.JumpingOnCloudsSolution"
